# IMU-Visualizer

./: .gitignore  CLEANUP_SUMMARY.md  FEATURES_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  SETUP_GUIDE.md  app.py  calibration.py  generate_IK.py  ik_solver.py  mbl_imuviz.code-workspace  sensor_mapping.py  spec-file.txt  test.py
backend/: README.md  VIDEO_DEBUG_GUIDE.md  copy_model_files.py  debug_frame_images.py  debug_ik_data.py  debug_mesh_creation.py  debug_single_frame.py  env.example  obj2video.py  osim2IMUvideo.py  pyproject.toml  quick_api_test.py  quick_test.py  run.py  simple_video_test.py  test_api_optimized.py  test_geometry_loading.py  test_imports.py  test_integration.py  test_mot_regeneration.py  test_obj2video.py  test_video_api.py  test_video_complete.py  test_video_fast.py  test_video_gen.py  video_frontend_api.py
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/api/database/: models.py  supabase.py
backend/src/api/models/: ik_models.py
backend/src/api/services/: calibration_service.py  ik_service.py  video_service.py
backend/src/api/utils/: data_processing.py
backend/src/constants/: __init__.py  constant_common.py
backend/src/scripts/: __init__.py  run_mt.py
backend/src/utils/: __init__.py  alignment.py  common.py  create_default_calib.py  mot2quats.py  mot_generator.py  osim2video_complete.py  osim2video_imu.py  osim_video_generator.py  setup_default_model.py
backend/static/models/: default_model.osim
backend/static/sessions/: session_ik_COMPLETE.mot  session_ik_results.json
(+107 files in other folders)
